Update README.md to current project state